In Blazor Server template, show login UI on small screens too. Fixes #13003

--- a/src/Components/test/testassets/ComponentsApp.Server/wwwroot/css/site.css
+++ b/src/Components/test/testassets/ComponentsApp.Server/wwwroot/css/site.css
@@ -36,9 +36,15 @@ app {
         justify-content: flex-end;
     }
 
-        .main .top-row > a {
+        .main .top-row > a, .main .top-row .btn-link {
+            white-space: nowrap;
             margin-left: 1.5rem;
         }
+
+.main .top-row a:first-child {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
 .sidebar {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
@@ -111,9 +117,36 @@ app {
     color: red;
 }
 
+#blazor-error-ui {
+    background: lightyellow;
+    bottom: 0;
+    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
+    display: none;
+    left: 0;
+    padding: 0.6rem 1.25rem 0.7rem 1.25rem;
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+}
+
+#blazor-error-ui .dismiss {
+    cursor: pointer;
+    position: absolute;
+    right: 0.75rem;
+    top: 0.5rem;
+}
+
 @media (max-width: 767.98px) {
-    .main .top-row {
+    .main .top-row:not(.auth) {
         display: none;
+    }
+
+    .main .top-row.auth {
+        justify-content: space-between;
+    }
+
+    .main .top-row a, .main .top-row .btn-link {
+        margin-left: 0;
     }
 }
 
